packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__init_templates__test__test_workflow_bun.snap
---
source: packages/cli/src/hbs_templating/init_templates.rs
expression: render_test_workflow(pm)
---
# GitHub Actions workflow for testing your Envio indexer
#
# This workflow runs your indexer tests on every push to main and on pull requests.
# It ensures your indexer code compiles correctly and all tests pass before merging.
#
# It runs the "codegen" and "test" scripts from package.json.
#
# Required: ENVIO_API_TOKEN
# Envio indexers use HyperSync as the default data source, which requires an Envio API token.
# Add ENVIO_API_TOKEN to your repository secrets before running this workflow.
# To add the secret: Repository Settings > Secrets and variables > Actions > New repository secret
# Get your token at: https://envio.dev

name: Test

on:
  # Run tests when code is pushed to main branch
  push:
    branches:
      - main
  # Run tests on all pull requests
  pull_request:

jobs:
  test:
    runs-on: ubuntu-latest

    steps:
      # Check out your repository code
      - name: Checkout code
        uses: actions/checkout@v4

      # Set up Node.js, which runs the indexer and its tests
      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: 24

      # Set up Bun, which installs dependencies and runs the scripts
      - name: Setup Bun
        uses: oven-sh/setup-bun@v2

      # Install project dependencies
      - name: Install dependencies
        run: bun install

      # Generate indexer types
      # This step is required before running tests
      - name: Run codegen
        run: bun run codegen
        env:
          ENVIO_API_TOKEN: ${{ secrets.ENVIO_API_TOKEN }}

      # Run your indexer tests using Vitest
      - name: Run tests
        run: bun run test
        env:
          ENVIO_API_TOKEN: ${{ secrets.ENVIO_API_TOKEN }}
